--- a/index.html
+++ b/index.html
@@ -10,44 +10,68 @@
 </head>
 
 <body>
-    <section id='page-section '>
+    <!-- <section id='page-section '>
         <div class='container'>
-           <!-- <div class = 'iflex'> -->
 
-<!--           
-            <h3 class="foundDiv">404 NOT FOUND</h3>
-           -->
+
             <div class=image-section>
-                <!-- <div>
-                <h3>404 NOT FOUND</h3>
-            </div> -->
-                <div class ='img-box'>
-                <img src="" alt="">
-            </div>
+
+                <div class='img-box'>
+                    <img src="" alt="">
+                </div>
             </div>
 
             <div class=text-section>
-                
-                    <h1>I have bad news for you</h1>
-                    <p>The page you are looking for might be removed or is temporary unavaliable</p>
+
+                <h1>I have bad news for you</h1>
+                <p>The page you are looking for might be removed or is temporary unavaliable</p>
                 <div>
-                <div class = 'text-button'>
-                    <button type="button" class = 'btn'>BACK TO HOME PAGE</button>
+                    <div class='text-button'>
+                        <button type="button" class='btn'>BACK TO HOME PAGE</button>
+                    </div>
+                </div>
+
+            </div>
+
+    </section> -->
+
+    <header>
+        <div class='container'>
+            <h3> 404 NOT FOUND</h3>
+        </div>
+    </header>
+
+    <section id="page-section">
+        <div class='container'>
+            <div class='flex flex-sm-column'>
+                <div class='image-section'>
+                    <img src='' alt=''>
                 </div>
 
 
 
+                <div class='text-section'>
+
+                    <h1>I have bad news for you</h1>
+                    <p>The page you are looking for might be removed or is temporary unavaliable</p>
+
+                    <div class='text-button'>
+                        <button type="button" class='btn'>BACK TO HOME PAGE</button>
+                    </div>
+
+                </div>
 
             </div>
-
-           <!-- </div> -->
-
-
-
-
         </div>
 
+
+
     </section>
+
+
+
+
+
 </body>
 
 </html>
