--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
 
     </section> -->
-
+<main>
     <header>
         <div class='container'>
             <h3> 404 NOT FOUND</h3>
@@ -68,7 +68,7 @@
 
     </section>
 
-
+</main>
 
 
 
